# plogtion

./: .gitignore  Cargo.toml  README.md  README.rst  zip_projects.sh
.github/: dependabot.yaml
.github/workflows/: ci.yaml  deploy.yaml
image_process/: Cargo.toml
image_process/src/: handler.rs
image_revert/: Cargo.toml
image_revert/src/: handler.rs
local/: Cargo.toml
local/src/: main.rs
post_form/: Cargo.toml
post_form/src/: brevo.rs  git.rs  handler.rs  tera.rs
src/: brevo.rs  handler.rs  image.rs  main.rs  tera.rs
sysinfo-stub/: Cargo.toml
sysinfo-stub/src/: lib.rs
templates/: post.md
