[package]
name = "plogtion"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/handler.rs"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
base64 = "0.22.1"
exr = "=1.5.1"
image = "=0.24.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["limit"] }
