[package]
name = "post_form"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/handler.rs"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
chrono = "0.4.42"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.0"
log = "0.4.28"
git2 = "0.20.2"
env_logger = "0.11.8"

[dev-dependencies]
pretty_assertions = "1.4.1"
