[package]
name = "post_form"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/handler.rs"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
chrono = "0.4.42"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.1"
log = "0.4.29"
git2 = "0.20.3"
env_logger = "0.11.8"

[dev-dependencies]
pretty_assertions = "1.4.1"
